Ingetst api work done

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.5",
     "daisyui": "^5.0.6",
+    "inngest": "^3.32.9",
     "lucide-react": "^0.483.0",
+    "mongoose": "^8.12.1",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
